# MachineSetup

./: .envrc  .gitignore  Makefile  README.md  TODO.md  ansible.cfg  fedora-desktop-system.yaml  fedora-desktop-user.yaml  fedora-desktop.yaml  fetch_install.yaml  fetch_install.yml  flatpak.yml  flatpaks.yaml  go.sh  gsettings.yaml  packages.yaml  print.yml  pyproject.toml  remove-user-flatpaks.sh  site.yml  text-markdown.xml
aux/: sync.sh
bash-completion/: bst
inhibitors/: wanderlust.sh
inventory/: hosts
inventory/group_vars/all/: vars.yml
inventory/group_vars/private/: vars.yml
inventory/group_vars/test/: vars.yml
inventory/group_vars/work/: vars.yml
inventory/host_vars/: mattiasb-dell-5401.yml  mattiasb-dell-ES470.yml  mattiasb-lenovo-yoga920.yml
plugins/filter/: filters.py
roles/bashcomp/defaults/: main.yml
roles/bashcomp/tasks/: bashcomp-command.yml  main.yml
roles/bashcomp/vars/: main.yml
roles/dnf/defaults/: main.yml
roles/dnf/tasks/: main.yml
roles/dnf/vars/: main.yml
roles/flatpak-system-clean/defaults/: main.yml
roles/flatpak-system-clean/tasks/: flatpak-system-clean.yml  main.yml
roles/flatpak-system-clean/vars/: main.yml
roles/flatpak/defaults/: main.yml
roles/flatpak/tasks/: flatpak_copy_compose.yml  main.yml
roles/git-install/defaults/: main.yml
roles/git-install/meta/: main.yml
roles/git-install/tasks/: git-install-from-forge.yml  git-install-from-repo.yml  main.yml
roles/git/defaults/: main.yml
roles/git/tasks/: git_clone.yml  main.yml
roles/gnome/defaults/: main.yml
roles/gnome/tasks/: main.yml  (+1 more)
(+27 files in other folders)
