[project]
name = "MachineSetup"
version = "0"
description = "Ansible configuration for my Fedora machines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.4.0",
]

[dependency-groups]
dev = [
    "remarshal>=1.0.0",
    "yamlfix>=1.17.0",
]

[tool.yamlfix]
line_length = 80
sequence_style = "block_style"
